--- a/.gitignore
+++ b/.gitignore
@@ -179,5 +179,6 @@ fastlane/test_output
 #
 # After new code Injection tools there's a generated folder /iOSInjectionProject
 # https://github.com/johnno1962/injectionforxcode
-
 iOSInjectionProject/
+project.pbxproj
+UserInterfaceState.xcuserstate
