--- a/.gitignore
+++ b/.gitignore
@@ -180,5 +180,5 @@ fastlane/test_output
 # After new code Injection tools there's a generated folder /iOSInjectionProject
 # https://github.com/johnno1962/injectionforxcode
 iOSInjectionProject/
-project.pbxproj
-UserInterfaceState.xcuserstate
+/project.pbxproj
+/UserInterfaceState.xcuserstate
