--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ iOSInjectionProject/
 /UserInterfaceState.xcuserstate
 /.idea/intellij-javadocs-4.0.1.xml
 iosApp/iosApp.xcodeproj/project.xcworkspace/xcuserdata/shahroze.xcuserdatad/UserInterfaceState.xcuserstate
+/.idea/other.xml
