--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,6 @@ iOSInjectionProject/
 /.idea/intellij-javadocs-4.0.1.xml
 iosApp/iosApp.xcodeproj/project.xcworkspace/xcuserdata/shahroze.xcuserdatad/UserInterfaceState.xcuserstate
 /.idea/other.xml
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/codeStyles/Project.xml
+/shared/src/desktopMain/app.db
