--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,7 @@ voyager = "1.0.0"
 
 #third party big numbers.
 kotlinx-bignum = "0.3.8"
+window = "1.2.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -103,6 +104,7 @@ voyager-transitions = { group = "cafe.adriel.voyager", name = "voyager-transitio
 
 # bignumbers:
 kotlin-bignum = { group = "com.ionspin.kotlin", name = "bignum", version.ref = "kotlinx-bignum" }
+androidx-window = { group = "androidx.window", name = "window", version.ref = "window" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
