Changes: - Web implementation in progress.

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,9 @@ org.gradle.configuration-cache=true
 #Kotlin
 kotlin.code.style=official
 
+#compose
+org.jetbrains.compose.experimental.jscanvas.enabled=true
+
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
