--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,5 @@ iosApp/iosApp.xcodeproj/project.xcworkspace/xcuserdata/shahroze.xcuserdatad/User
 /.idea/codeStyles/Project.xml
 /shared/src/desktopMain/app.db
 /shared/src/desktopMain/desktop_app_db.db
+/.idea/**/*.xml
+/kotlin-js-store/yarn.lock
